--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
   "name": "stocks",
-  "productName": "stocks",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": ".webpack/main",
+  "description": "stocks managing app",
+  "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "start": "electron .",
+    "test": "test.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GodWindows/stocks.git"
+  },
+  "keywords": [
+    "electrion"
+  ],
+  "author": "GodWindows",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GodWindows/stocks/issues"
+  },
+  "homepage": "https://github.com/GodWindows/stocks#readme",
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron-forge/plugin-webpack": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "css-loader": "^6.11.0",
-    "electron": "31.1.0",
-    "node-loader": "^2.0.0",
-    "style-loader": "^3.3.4"
-  },
-  "keywords": [],
-  "author": {
-    "name": "GodWindows",
-    "email": "kanlinsougodwin@gmail.com"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron": "^31.1.0"
   }
 }
