added a database and the form is now sending data to the database

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/GodWindows/stocks#readme",
   "devDependencies": {
     "electron": "^31.1.0"
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.7"
   }
 }
